--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ title: Kumar Pallav
             <p>
               <a
                 class="icon"
-                href="https://github.com/pforpallav/pforpallav.github.io"
+                href="https://github.com/ayush17/ayush17.github.io"
               >
                 <i class="fa fa-github"></i>
               </a>
