--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ title: Kumar Pallav
               >
                 <i class="fa fa-github"></i>
               </a>
-              <a href="main.pdf" class="icon" download>
+              <a href="ayush_resume.pdf" class="icon" download>
                 <i class="fa fa-download" aria-hidden="true"> </i
               ></a>
             </p>
